<resources>
    <string name="app_name">RawCation</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="log_in_with_phone">Log in with Phone</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log In</string>
    <string name="new_user_get_account_here">New User? Get account here.</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="donate">Donate</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="view_pager">View Pager</string>
    <string name="dashboard">Dashboard</string>
</resources>